starting to add doing section

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -51,7 +51,8 @@ body
 
 .gatsby-section-wrapper
   display: inline-block
-  padding: 10%
+  padding-left: 10%
+  padding-right: 10%
 
 .greeting
   display: flex
@@ -70,8 +71,7 @@ body
   display: inline-block
   max-width: 50%
   position: relative
-  padding: 2em
-  padding-top: 10%
+  padding-left: 10%
   a
     color: black
 
@@ -86,3 +86,6 @@ body
 .navbar-start
   display: flex
   flex-direction: column
+
+.web-dev-section
+  max-width: 35em
